# qtwebsockets

./: .cmake.conf  .gitignore  .prev_CMakeLists.txt  .qmake.conf  CMakeLists.txt  Doxyfile  README.md  conanfile.py  dependencies.yaml  fuzzingclient.json  groups  index.html  params.json  project.config  qwebsockets.pro  sync.profile  websockets.pro
coin/: module_config.yaml
doc/: qwebsockets.qdocconfig
doc/src/: qwebsockets.qdoc
examples/: CMakeLists.txt  analyse.sh  examples.pro  examples.qdoc
examples/doc/: echoclient.qdoc  echoserver.qdoc  qmlwebsocketclient.qdoc  simplechat.qdoc  sslechoclient.qdoc  sslechoserver.qdoc
examples/echoclient/: echoclient.cpp  echoclient.h  echoclient.pro  main.cpp
examples/echoserver/: echoserver.cpp  echoserver.h  echoserver.pro  main.cpp
examples/qmlwebsocketclient/: main.cpp  qmlwebsocketclient.desktop  qmlwebsocketclient.pro  qmlwebsocketclient_harmattan.desktop
examples/simplechat/: chatclient.html  chatserver.cpp  chatserver.h  main.cpp
examples/sslechoclient/: main.cpp  sslechoclient.cpp  sslechoclient.h
examples/sslechoserver/: main.cpp  sslechoclient.html  sslechoserver.cpp  sslechoserver.h
examples/websocketclient/: main.cpp  websocketclient.cpp  websocketclient.h  websocketclient.pro
examples/websockets/: CMakeLists.txt  websockets.pro
examples/websockets/doc/: echoclient.qdoc  echoserver.qdoc  examples.qdoc  qmlwebsocketclient.qdoc  qmlwebsocketserver.qdoc  simplechat.qdoc  sslechoclient.qdoc  sslechoserver.qdoc
examples/websockets/echoclient/: CMakeLists.txt  echoclient.cpp  echoclient.h  main.cpp
examples/websockets/echoserver/: CMakeLists.txt  echoclient.html  echoserver.cpp  echoserver.h  main.cpp
examples/websockets/qmlwebsocketclient/: CMakeLists.txt  main.cpp
examples/websockets/qmlwebsocketclient/qml/qmlwebsocketclient/: main.qml
examples/websockets/qmlwebsocketserver/: CMakeLists.txt  main.cpp
examples/websockets/qmlwebsocketserver/qml/qmlwebsocketserver/: main.qml
examples/websockets/simplechat/: CMakeLists.txt  chatclient.html  chatserver.cpp  chatserver.h  main.cpp  simplechat.pro
examples/websockets/sslechoclient/: CMakeLists.txt  main.cpp  sslechoclient.cpp  sslechoclient.h  sslechoclient.pro
examples/websockets/sslechoserver/: CMakeLists.txt  generate.sh  localhost.cert  localhost.key  main.cpp  sslechoserver.cpp  sslechoserver.h  sslechoserver.pro
examples/websocketserver/: helloworldserver.cpp  helloworldserver.h  main.cpp  websocketserver.pro
modules/: qt_websockets.pri
source/: dataprocessor.cpp  dataprocessor.h  dataprocessor_p.cpp  dataprocessor_p.h  handshakerequest.cpp  handshakerequest_p.cpp  handshakerequest_p.h  handshakeresponse.cpp  handshakeresponse_p.cpp  handshakeresponse_p.h  qwebsocket.cpp  qwebsocket.h  qwebsocketprotocol.cpp  qwebsocketprotocol.h  qwebsocketserver.cpp  qwebsocketserver.h  qwebsocketserver_p.cpp  qwebsocketsglobal.h  websocket.cpp  websocket.h  websocket.pri  websocketprotocol.cpp  websocketprotocol.h  websocketserver.cpp  websocketserver.h  websocketserver_p.cpp  websocketserver_p.h
src/: CMakeLists.txt  dataprocessor_p.cpp  dataprocessor_p.h  handshakerequest_p.cpp  handshakerequest_p.h  handshakeresponse_p.cpp  handshakeresponse_p.h  qwebsocket.cpp  qwebsocket.h  qwebsocket_p.cpp  qwebsocket_p.h  qwebsocketprotocol.cpp  qwebsocketprotocol.h  qwebsockets.pri  qwebsockets.pro  qwebsocketserver.cpp  qwebsocketserver.h  qwebsocketserver_p.cpp  qwebsocketserver_p.h  qwebsocketsglobal.h  src.pro
src/doc/: qwebsockets.qdocconfig
src/imports/: .prev_CMakeLists.txt  CMakeLists.txt
src/imports/qmlwebsockets/: .prev_CMakeLists.txt  CMakeLists.txt  plugins.qmltypes  qmldir  qmlwebsockets.pro  qmlwebsockets_plugin.cpp  qmlwebsockets_plugin.h  qqmlwebsocket.cpp  qqmlwebsocket.h  qqmlwebsocketserver.cpp  qqmlwebsocketserver.h
src/imports/qmlwebsockets_compat/: plugins.qmltypes  qmldir
src/websockets/: CMakeLists.txt  handshakerequest_p.cpp  handshakeresponse_p.cpp  qdefaultmaskgenerator_p.cpp  qdefaultmaskgenerator_p.h  qmaskgenerator.cpp  qmaskgenerator.h  qsslserver.cpp  qsslserver_p.cpp  qsslserver_p.h  qwebsocket.cpp  qwebsocket.h  qwebsocket_p.cpp  qwebsocket_p.h  qwebsocket_wasm_p.cpp  qwebsocket_wasm_p.h  qwebsocketcorsauthenticator.cpp  qwebsocketcorsauthenticator.h  qwebsocketcorsauthenticator_p.h  qwebsocketdataprocessor.cpp  qwebsocketdataprocessor_p.cpp  qwebsocketdataprocessor_p.h  qwebsocketframe.cpp  qwebsocketframe_p.cpp  qwebsocketframe_p.h  qwebsockethandshakeoptions.cpp  qwebsockethandshakeoptions.h  qwebsockethandshakeoptions_p.h  qwebsockethandshakerequest.cpp  qwebsockethandshakerequest_p.cpp  qwebsockethandshakerequest_p.h  qwebsockethandshakeresponse.cpp  qwebsockethandshakeresponse_p.cpp  qwebsockethandshakeresponse_p.h  qwebsocketprotocol.cpp  qwebsocketprotocol.h  qwebsocketprotocol_p.cpp  qwebsocketprotocol_p.h  qwebsockets_global.h  qwebsocketserver.cpp  (+4 more)
src/websockets/doc/: qtwebsockets.qdocconf  qtwebsockets.qdocconfig  qwebsockets.qdoc  qwebsockets.qdocconfig
src/websockets2/: qwebsocket.cpp  qwebsocket.h  qwebsocket_p.cpp  qwebsocket_p.h  websockets2.pro
test/: echoserver.py  fuzzingserver.json  start_echo_server.sh  stop_echo_server.sh  tst_compliance.cpp  tst_websockets.cpp  unittests.h  unittests.pro
tests/: .prev_CMakeLists.txt  CMakeLists.txt  fuzzingclient.json  main.cpp  tests.pro  tst_compliance.cpp  tst_dataprocessor.cpp  tst_websockets.cpp  unittests.h  unittests.pro
tests/auto/: .prev_CMakeLists.txt  CMakeLists.txt  auto.pro
tests/auto/cmake/: CMakeLists.txt
tests/auto/dataprocessor/: dataprocessor.pro  tst_dataprocessor.cpp
tests/auto/handshakerequest/: handshakerequest.pro  tst_handshakerequest.cpp
tests/auto/handshakeresponse/: tst_handshakeresponse.cpp
tests/auto/qdefaultmaskgenerator/: qdefaultmaskgenerator.pro  tst_defaultmaskgenerator.cpp
tests/auto/qml/: .prev_CMakeLists.txt  CMakeLists.txt  qml.pro
tests/auto/qwebsocket/: tst_qwebsocket.cpp
tests/auto/qwebsocketcorsauthenticator/: tst_qwebsocketcorsauthenticator.cpp
tests/auto/websockets/: CMakeLists.txt
(+55 files in other folders)
